fixed off center user items display

--- a/skeleton-main/client/src/components/pages/UserAllItems.css
+++ b/skeleton-main/client/src/components/pages/UserAllItems.css
@@ -1,5 +1,4 @@
 .Items-container {
-  padding: 2rem;
   margin: 0 auto;
   font-family: "Playfair Display", serif;
   background-color: #fdf9f6;
